# DuGuo-Chinese-Reading-App

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  get-pip.py  kernel_install.py  mongod_playgnd.py  mongodb_playgnd.ipynb  playgnd.py  requirements.txt
app/: Cargo.toml  Dockerfile  Rocket.toml  __init__.py  app.py  config.py  flask_app.py  forms.py  imnotcrazy.py  models.py  requirements.txt  routes.py  rust.Dockerfile  tester.py  views.py
app/backend/: Cargo.toml
app/backend/src/: api.rs  auth.rs  config.rs  html.rs  lib.rs  main.rs  routes.rs
app/backend/src/models/: mod.rs  public.rs  sandbox.rs  user.rs  zh.rs
app/backend/src/routes/: mod.rs
app/frontend/: Cargo.toml  Trunk.toml  index.html
app/frontend/html/: index-69b1b79221fbd043.js  index-69b1b79221fbd043_bg.wasm  index.html
app/frontend/src/: Main.elm  lib.rs  main.rs
app/frontend/src/components/: footer.rs  mod.rs  navbar.rs  phrase.rs
app/frontend/src/pages/: feedback.rs  home.rs  login.rs  mod.rs  profile.rs  reader.rs  sandbox.rs
app/lib/: authorization.py  mongo.py  stanford.py  zhongwen.py
app/models/: zwDocument.py
app/src/: api.rs  auth.rs  config.rs  html.rs  html_rendering.rs  lib.rs  main.rs  routes.rs
app/src/models/: mod.rs  public.rs  sandbox.rs  user.rs  zh.rs
app/src/routes/: mod.rs  primary.rs  users.rs
app/static/: app.js  handleReader.js  handleSandbox.js  style.css  template.js
app/static/css/: styles.css
app/static/html/: index-4162a75b1ac55bfc.js  index-4162a75b1ac55bfc_bg.wasm  index.html
app/static/js/: handleLogins.js  handlePhonetics.js  handlePopups.js  handleReader.js  handleSandbox.js  scripts.js  template.js
app/templates/: .view.html.swp  about.html  about.html.tera  edit.html  error.html.tera  feedback.html.tera  index.html  index.html.tera  layout.html  login.html  login.html.tera  profile.html.tera  reader.html.tera  sandbox.html.tera  signup.html  template.html.tera  userprofile.html.tera  view.html  vocab.html
app/templates/static/: handleHash.js  handleKeyEvents.js  handleLogins.js  handlePhonetics.js  handlePinyin.js  handlePopups.js  handleReader.js  handleSandbox.js  handleTables.js  template.js
app/templates/static/docs/: search-index.js  settings.html  source-files.js
app/templates/static/docs/duguo/: all.html  fn.connect_to_mongodb.html  fn.convert_rawstr_to_string.html  fn.launch_rocket.html  fn.scrape_text_from_url.html  index.html  sidebar-items.js  trait.CacheItem.html  trait.DatabaseItem.html
app/templates/static/docs/duguo/auth/: fn.add_user_cookie_to_context.html  fn.generate_http_cookie.html  fn.get_username_from_cookie.html  fn.str_to_hashed_string.html  index.html  sidebar-items.js
app/templates/static/docs/duguo/config/: index.html  sidebar-items.js  static.DB_NAME.html  static.DB_URI.html  static.JWT_LIFETIME.html  static.JWT_NAME.html  static.JWT_SECRET.html  static.REDIS_URI.html  static.SANDBOX_COLL_NAME.html  static.TOKENIZER_HOSTNAME.html  static.TOKENIZER_PORT.html  static.USER_COLL_NAME.html  static.USER_DOC_COLL_NAME.html  static.USER_FEEDBACK_COLL_NAME.html  static.USER_VOCAB_COLL_NAME.html  static.USER_VOCAB_LIST_COLL_NAME.html
app/templates/static/docs/duguo/html/: fn.convert_string_to_tokenized_html.html  fn.render_document_table.html  fn.render_phrase_html.html  fn.render_vocab_table.html  index.html  sidebar-items.js
app/templates/static/docs/duguo/models/: index.html  sidebar-items.js
app/templates/static/docs/duguo/models/sandbox/: index.html  sidebar-items.js  struct.AppFeedback.html  struct.SandboxDoc.html  struct.UserFeedback.html
app/templates/static/docs/duguo/models/user/: index.html  sidebar-items.js  struct.User.html  struct.UserDoc.html  struct.UserVocab.html  struct.UserVocabList.html
app/templates/static/docs/duguo/models/zh/: enum.CnPhonetics.html  enum.CnType.html  (+3 more)
app/templates/static/docs/duguo/routes/: index.html  sidebar-items.js
app/templates/static/docs/implementors/duguo/: trait.CacheItem.js
app/templates/static/docs/src/duguo/: auth.rs.html  config.rs.html  html.rs.html  lib.rs.html
app_rust/: Cargo.toml  Rocket.toml
app_rust/src/: lib.rs  main.rs
app_rust/templates/: index.html.tera  login.html.tera
(+194 files in other folders)
