[package]
name = "duguo"
version = "0.1.0"
authors = ["epan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
uuid = { version = "0.8", features = ["v4"] }
mongodb = { version = "1.1.1", default-features = false, features = ["sync"]}
blake2 = "0.9.1"
hex = "0.3.1"
serde = "1.0.118"

# Docs: https://api.rocket.rs/v0.4/rocket_contrib/
[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates"]