[package]
name = "duguo"
version = "0.1.0"
authors = ["epan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
uuid = { version = "0.8", features = ["v4"] }
mongodb = "1.1.1"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
blake2 = "0.9.1"
hex = "0.3.1"
serde = "1.0.118"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12.0"

# Docs: https://api.rocket.rs/v0.4/rocket_contrib/
[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates", "serve"]