[package]
name = "app_rust"
version = "0.1.0"
authors = ["epan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
mongodb = "1.0.0"
uuid = { version = "0.8", features = ["v4"] }

# Docs: https://api.rocket.rs/v0.4/rocket_contrib/
[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates"]