[package]
name = "duguo_frontend"
repository = "https://github.com/ericpan64/DuGuo-Chinese-Reading-App"
homepage = "https://duguo-app.com"
version = "0.1.0"
authors = ["epan"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.18" } # Note: some weird bug with yew_stdweb - try importing stdweb on its own
yew-router = "0.15.0"
reqwest = "0.11.4"
wasm-bindgen = "=0.2.74"