[package]
name = "duguo_frontend"
repository = "https://github.com/ericpan64/DuGuo-Chinese-Reading-App"
homepage = "https://duguo-app.com"
version = "0.1.0"
authors = ["epan"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18" # uses web-sys by default
yew-router = "0.15.0"
wasm-bindgen = "=0.2.74"
serde = {version = "1.0.118", features = ["derive"]}
anyhow = "1"